test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/extra_credit/libraries/same_label_same_fun.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: f
        List[0]: 
        CB: 
          List[3]: 
            CS: 
              CGoto: 
                TIdentifier: x
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
            CS: 
              CLabel: 
                TIdentifier: x
                CReturn: 
                  CConstant: 
                    CConstInt: 
                      TInt: 2
                    None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        CStatic: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: f_caller
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CFunctionCall: 
                  TIdentifier: f
                  List[0]: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
